package ch19_01;

import java.util.Map;

/**
 * program: java-learn->IOuterUserBaseInfo
 * description:  用户基本信息接口
 * author: gerry
 * created: 2020-03-22 09:19
 **/
public interface IOuterUserBaseInfo {
    //基本信息，比如名称、性别、手机号码等
    public Map getUserBaseInfo();
}
