package ch19_01;

import java.util.Map;

/**
 * program: java-learn->IOuterUserHomeInfo
 * description: 用户家庭信息接口
 * author: gerry
 * created: 2020-03-22 09:20
 **/
public interface IOuterUserHomeInfo {
    //用户的家庭信息
    public Map getUserHomeInfo();
}
