package ch19_01;

import java.util.Map;

/**
 * program: java-learn->IOuterUserOfficeInfo
 * description:  用户工作信息接口
 * author: gerry
 * created: 2020-03-22 09:21
 **/
public interface IOuterUserOfficeInfo {
    //工作区域信息
    public Map getUserOfficeInfo();
}
